--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: quiz-app
   datasource:
-    url: ${DB.URL}
-    username: ${DB.USERNAME}
-    password: ${DB.PASSWORD}
+    url: jdbc:postgresql://ep-frosty-dew-a1qhchnr-pooler.ap-southeast-1.aws.neon.tech/quizAppDB
+    username: neondb_owner
+    password: npg_IwJ5eHhWLN0u
     hikari:
       max-lifetime: 300000
       idle-timeout: 60000
